src/test/ui/generic-associated-types/issue-87429-specialization.stderr
warning: the feature `specialization` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/issue-87429-specialization.rs:3:12
   |
LL | #![feature(specialization)]
   |            ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #31844 <https://github.com/rust-lang/rust/issues/31844> for more information
   = help: consider using `min_specialization` instead, which is more stable and complete

error[E0277]: can't compare `Foo` with `Foo`
  --> $DIR/issue-87429-specialization.rs:21:31
   |
LL |     default type Member<'a> = Foo;
   |                               ^^^ no implementation for `Foo == Foo`
   |
   = help: the trait `PartialEq` is not implemented for `Foo`
note: required by a bound in `Family::Member`
  --> $DIR/issue-87429-specialization.rs:8:22
   |
LL |     type Member<'a>: for<'b> PartialEq<Self::Member<'b>>;
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `Family::Member`

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0277`.
